@@ -1,5 +1,5 @@
 /*
- * Copyright 2017-2019 the original author or authors.
+ * Copyright 2017-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,6 +21,7 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.willAnswer;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.only;
 import static org.mockito.Mockito.verify;
 
 import java.util.ArrayList;
@@ -29,6 +30,7 @@ import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
 import org.apache.kafka.clients.consumer.ConsumerRecord;
+import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.junit.jupiter.api.Test;
 
 import org.springframework.kafka.listener.BatchAcknowledgingMessageListener;
@@ -36,6 +38,7 @@ import org.springframework.kafka.support.Acknowledgment;
 
 /**
  * @author Gary Russell
+ * @author Sanghyeok An
  * @since 2.0
  *
  */
@@ -46,7 +49,7 @@ public class FilteringAdapterTests {
 	public void testBatchFilter() throws Exception {
 		BatchAcknowledgingMessageListener<String, String> listener = mock(BatchAcknowledgingMessageListener.class);
 		FilteringBatchMessageListenerAdapter<String, String> adapter =
-				new FilteringBatchMessageListenerAdapter<String, String>(listener, r -> false);
+				new FilteringBatchMessageListenerAdapter<>(listener, r -> false);
 		List<ConsumerRecord<String, String>> consumerRecords = new ArrayList<>();
 		final CountDownLatch latch = new CountDownLatch(1);
 		willAnswer(i -> {
@@ -64,12 +67,174 @@ public class FilteringAdapterTests {
 	public void testBatchFilterAckDiscard() throws Exception {
 		BatchAcknowledgingMessageListener<String, String> listener = mock(BatchAcknowledgingMessageListener.class);
 		FilteringBatchMessageListenerAdapter<String, String> adapter =
-				new FilteringBatchMessageListenerAdapter<String, String>(listener, r -> false, true);
+				new FilteringBatchMessageListenerAdapter<>(listener, r -> false, true);
 		List<ConsumerRecord<String, String>> consumerRecords = new ArrayList<>();
 		final CountDownLatch latch = new CountDownLatch(1);
-		adapter.onMessage(consumerRecords, () -> latch.countDown(), null);
+		adapter.onMessage(consumerRecords, latch::countDown, null);
 		assertThat(latch.await(10, TimeUnit.SECONDS)).isTrue();
 		verify(listener, never()).onMessage(any(List.class), any(Acknowledgment.class));
+	}
+
+	@SuppressWarnings("unchecked")
+	@Test
+	public void listener_should_not_be_invoked_on_emptyList_and_ignoreEmptyBatch_true() {
+		// Given :
+		RecordFilterStrategy<String, String> filter = new RecordFilterStrategy<>() {
+
+			@Override
+			public boolean filter(ConsumerRecord<String, String> consumerRecord) {
+				return true;
+			}
+
+			@Override
+			public List<ConsumerRecord<String, String>> filterBatch(
+					List<ConsumerRecord<String, String>> consumerRecords) {
+				return List.of();
+			}
+
+			@Override
+			public boolean ignoreEmptyBatch() {
+				return true;
+			}
+		};
+
+		BatchAcknowledgingMessageListener<String, String> listener = mock();
+		FilteringBatchMessageListenerAdapter<String, String> adapter =
+				new FilteringBatchMessageListenerAdapter<>(listener, filter);
+		List<ConsumerRecord<String, String>> consumerRecords = new ArrayList<>();
+		Acknowledgment ack = mock();
+
+		// When :
+		adapter.onMessage(consumerRecords, ack, null);
+
+		// Then
+		verify(ack, only()).acknowledge();
+		verify(listener, never()).onMessage(any(List.class), any(Acknowledgment.class), any(KafkaConsumer.class));
+		verify(listener, never()).onMessage(any(List.class), any(Acknowledgment.class));
+		verify(listener, never()).onMessage(any(List.class), any(KafkaConsumer.class));
+		verify(listener, never()).onMessage(any(List.class));
+	}
+
+	@SuppressWarnings("unchecked")
+	@Test
+	public void listener_should_be_invoked_on_notEmptyList_and_ignoreEmptyBatch_true() throws Exception {
+		// Given :
+		RecordFilterStrategy<String, String> filter = new RecordFilterStrategy<>() {
+
+			@Override
+			public boolean filter(ConsumerRecord<String, String> consumerRecord) {
+				return true;
+			}
+
+			@Override
+			public List<ConsumerRecord<String, String>> filterBatch(
+					List<ConsumerRecord<String, String>> consumerRecords) {
+				return consumerRecords;
+			}
+
+			@Override
+			public boolean ignoreEmptyBatch() {
+				return true;
+			}
+		};
+
+		BatchAcknowledgingMessageListener<String, String> listener = mock();
+		FilteringBatchMessageListenerAdapter<String, String> adapter =
+				new FilteringBatchMessageListenerAdapter<>(listener, filter);
+		List<ConsumerRecord<String, String>> consumerRecords =
+				List.of(new ConsumerRecord<>("hello-topic", 1, 1, "hello-key", "hello-value"));
+		Acknowledgment ack = mock();
+
+		CountDownLatch latch = new CountDownLatch(1);
+		willAnswer(i -> {
+			latch.countDown();
+			return null;
+		}).given(listener).onMessage(any(List.class), any(Acknowledgment.class));
+
+		// When :
+		adapter.onMessage(consumerRecords, ack, null);
+
+		// Then
+		assertThat(latch.await(10, TimeUnit.SECONDS)).isTrue();
+		verify(ack, never()).acknowledge();
+	}
+
+	@SuppressWarnings("unchecked")
+	@Test
+	public void listener_should_be_invoked_on_emptyList_and_ignoreEmptyBatch_false() throws Exception {
+		// Given :
+		RecordFilterStrategy<String, String> filter = new RecordFilterStrategy<>() {
+
+			@Override
+			public boolean filter(ConsumerRecord<String, String> consumerRecord) {
+				return true;
+			}
+
+			@Override
+			public List<ConsumerRecord<String, String>> filterBatch(
+					List<ConsumerRecord<String, String>> consumerRecords) {
+				return List.of();
+			}
+		};
+
+		BatchAcknowledgingMessageListener<String, String> listener = mock();
+		FilteringBatchMessageListenerAdapter<String, String> adapter =
+				new FilteringBatchMessageListenerAdapter<>(listener, filter);
+		List<ConsumerRecord<String, String>> consumerRecords = new ArrayList<>();
+		Acknowledgment ack = mock();
+
+		CountDownLatch latch = new CountDownLatch(1);
+		willAnswer(i -> {
+			latch.countDown();
+			return null;
+		}).given(listener).onMessage(any(List.class), any(Acknowledgment.class));
+
+		// When :
+		adapter.onMessage(consumerRecords, ack, null);
+
+		// Then
+		assertThat(latch.await(10, TimeUnit.SECONDS)).isTrue();
+		verify(ack, never()).acknowledge();
+	}
+
+	@SuppressWarnings("unchecked")
+	@Test
+	public void listener_should_be_invoked_on_notEmptyList_and_ignoreEmptyBatch_false() throws Exception {
+		// Given :
+		RecordFilterStrategy<String, String> filter = new RecordFilterStrategy<>() {
+
+			@Override
+			public boolean filter(ConsumerRecord<String, String> consumerRecord) {
+				return true;
+			}
+
+			@Override
+			public List<ConsumerRecord<String, String>> filterBatch(
+					// System Under Test
+					List<ConsumerRecord<String, String>> consumerRecords) {
+				return consumerRecords;
+			}
+		};
+
+		BatchAcknowledgingMessageListener<String, String> listener = mock();
+		FilteringBatchMessageListenerAdapter<String, String> adapter =
+				new FilteringBatchMessageListenerAdapter<>(listener, filter);
+		List<ConsumerRecord<String, String>> consumerRecords =
+				List.of(new ConsumerRecord<>("hello-topic", 1, 1, "hello-key", "hello-value"));
+		Acknowledgment ack = mock();
+
+		final CountDownLatch latch = new CountDownLatch(1);
+		willAnswer(i -> {
+			latch.countDown();
+			return null;
+		}).given(listener).onMessage(any(List.class), any(Acknowledgment.class));
+
+		// When :
+		adapter.onMessage(consumerRecords, ack, null);
+
+		// Then
+		assertThat(latch.await(10, TimeUnit.SECONDS)).isTrue();
+		verify(ack, never()).acknowledge();
 	}
 
 }
